@@ -2503,6 +2503,15 @@ This spell evokes an electric field to surround the target.  Anyone trying to \
 touch or engage in melee combat with the target thus becomes vulnerable \
 to the scorching sparks.
 
+SHODDY_AURA=SPELL_SHODDYAURA
+SPELL_SHODDY_AURA=SPELL_SHODDYAURA
+SPELL_SHODDYAURA=<ABILITY>\
+Usage    : CAST "SHODDY AURA" [TARGET NAME]\n\r\
+Example  : cast "shoddy aura" sword\n\r\
+The item affected by this spell will appear to be shoddily made and in \
+terrible condition.  This will fool shopkeepers into turning it away, \
+but won't fool magical or expert analysis of the item.
+
 SPELL_SHOVE=<ABILITY>\
 Usage    : CAST SHOVE [MOB NAME] [DIRECTION]\n\r\
 Example  : cast "shove" orc east\n\r\
